# Carreras

./: .gitignore  GUIA-BACKEND.md  GUIA-CARGA.md  GUIA-PUBLICACION.md  GUIA-SIN-CODIGO.md  README.md  admin.html  app.js  carrera.html  carreras.html  cart.html  data.js  index.html  precios.html  reportes.html  styles.css
assets/: PHOTO-CREDITS.md
assets/races/: README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/core/: security.py  settings.py
backend/app/routers/: __init__.py  admin.py  admin_auth.py  public.py
backend/app/services/: bootstrap.py
